--- a/apps/day-2/npm-demo/package.json
+++ b/apps/day-2/npm-demo/package.json
@@ -11,5 +11,8 @@
   "dependencies": {
     "lodash": "^4.17.15",
     "moment": "^2.24.0"
+  },
+  "devDependencies": {
+    "jasmine": "^3.5.0"
   }
 }
