--- a/apps/day-2/npm-demo/package.json
+++ b/apps/day-2/npm-demo/package.json
@@ -9,6 +9,8 @@
   "author": "Naveen Pete",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.6",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "moment": "^2.24.0"
   },
