--- a/apps/day-3/ecom-server/package.json
+++ b/apps/day-3/ecom-server/package.json
@@ -10,7 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.15",
     "mongoose": "^5.7.8",
     "morgan": "^1.9.1",
     "pug": "^2.0.4"
